2006-05-05  Jan Patera <patera@users.sourceforge.net>
	* libexif/exif-content.c: fixed bug #1471060: wasted space in 
	  exif_content_add_entry() & exif_content_remove_entry(); also safe
	  handling of failed realloc in exif_content_add_entry()

2006-04-15  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-loader.c: exif_loader_write() correctly skips APP2 marker
	  with ICC profile because ImageMagick flips order of APP1 EXIF and
	  APP2 ICC markers.

2006-02-19  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-utils.h: ExifByte is now explicitly unsigned char,
	  added ExifSByte as signed char.

2006-02-13  Lutz Mueller <lutz@topfrose.de>

	* libexif/canon/mnote-canon-entry.c: Fix typo.
	* libexif/exif-entry.c: s/compulsatory/compulsory
	* libexif/exif-tag.c: Fix typo.
	* libexif/olympus/mnote-olympus-entry.c: Fix typo.
	* test/nls/test-nls.c: Add translators' comment.

2006-01-19  Marcus Meissner  <marcus@jet.franken.de>

	* libexif/exif-data.c: Let exif_data_load_data_entry() signal failure
	  and discard entry in caller if it does.

2006-01-16  Hubert Figuiere  <hub@figuiere.net>

	* libexif/exif-mem.h, libexif/exif-loader.h: More documentation

2006-01-03  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: fix once for all the versioning.
	No actual version change has taken place this time.

2006-01-02  Hubert Figuiere  <hub@figuiere.net>

	* libexif/Makefile.am (libexif_la_DEPENDENCIES): depends
	on the .sym file. Need to relink if modified.

2005-12-27  Lutz Mueller <lutz@topfrose.de>

	* NEWS
	* configure.ac: We're now working on version 0.6.14.

2005-12-27  Lutz Mueller <lutz@topfrose.de>

	* test/Makefile.am: Remove the SOURCES variables - they are not necessary.

2005-10-24  Jan Patera <patera@users.sourceforge.net>

	* libexif/Canon/mnote-canon-entry.c: Don't check size of MNOTE_CANON_TAG_OWNER
	  and MNOTE_CANON_TAG_FIRMWARE - there can be many different values.

2005-08-27  Jan Patera <patera@users.sourceforge.net>
