@@ -28,8 +28,10 @@ extern "C" {
 enum _MnoteCanonTag {
 	MNOTE_CANON_TAG_UNKNOWN_0	= 0x0,
 	MNOTE_CANON_TAG_SETTINGS_1	= 0x1,
+	MNOTE_CANON_TAG_FOCAL_LENGTH	= 0x2,
 	MNOTE_CANON_TAG_UNKNOWN_3	= 0x3,
 	MNOTE_CANON_TAG_SETTINGS_2	= 0x4,
+	MNOTE_CANON_TAG_PANORAMA	= 0x5,
 	MNOTE_CANON_TAG_IMAGE_TYPE	= 0x6,
 	MNOTE_CANON_TAG_FIRMWARE	= 0x7,
 	MNOTE_CANON_TAG_IMAGE_NUMBER	= 0x8,
